--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<link rel="stylesheet" href="/index.css"
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href='styles.css'>
+</head>
+<body>
+
 <h1>Home Page</h1>
+<p>Login to start....</p>
+
+</body>
+</html>
